--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/ny.jpg" alt="Los Angeles" style="width:100%;">
         <div class="carousel-caption">
           <h3>Los Angeles</h3>
           <p>LA is always so much fun!</p>
@@ -32,7 +32,7 @@
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+        <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/chicago.jpg" alt="Chicago" style="width:100%;">
         <div class="carousel-caption">
           <h3>Chicago</h3>
           <p>Thank you, Chicago!</p>
@@ -40,7 +40,7 @@
       </div>
     
       <div class="item">
-        <img src="ny.jpg" alt="New York" style="width:100%;">
+        <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/la.jpg" alt="New York" style="width:100%;">
         <div class="carousel-caption">
           <h3>New York</h3>
           <p>We love the Big Apple!</p>
