--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+  <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCgG8dPmm_Khss5aS7yctcfRxjTmcUXg4I",
+    authDomain: "zslitwarszawa.firebaseapp.com",
+    databaseURL: "https://zslitwarszawa.firebaseio.com",
+    projectId: "zslitwarszawa",
+    storageBucket: "zslitwarszawa.appspot.com",
+    messagingSenderId: "502519220327"
+  };
+  firebase.initializeApp(config);
+</script>
+  
 </head>
 <body>
 
