--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Cyfrowy wróżbita</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,13 +20,16 @@
     messagingSenderId: "502519220327"
   };
   firebase.initializeApp(config);
+  
+  var fortuneQuotes = [ "A dream you have will come true.", "Our deeds determine us, as much as we determine our deeds.", "Never give up. You're not a failure if you don't give up.", "You can make your own happiness.", "Jeśli 3 razy kucniesz i 5 razy obrócisz się dookoła - twoja miłość będzie spełniona.", "Przed spożyciem ciasteczka skonsultuj się z lekarzem lub farmaceutą.", "Co masz zrobić dziś zrób dziś.", "Jak kocha to poczeka…<3", "Wrzuć na luz!", "Dzisiaj jest twój dobry dzień.", "Zasady są po to by je łamać", "Jak kocha to poczeka…", "Uwielbiasz chińszczyznę.", "Wszechświat wybrał cię na międzygalaktycznego wodzireja.", "Wkrótce skontaktuje się z tobą kosmita.", "Konfucjusz mówi, że masz serce wielkie jak Pałac Kultury.", "Wprowadź więcej danych.", "Now is the time to try something new.", "A very attractive person has a message for you.", "Wkrótce zostaniesz Dyrektorem na Wiśniowej 56", "Dostałeś bilet do samolotu, który stoi pod szkołą, lot dziś o 20. Zgłoś ię do dyrekcji" ];
+  
 </script>
   
 </head>
 <body>
 
 <div class="container">
-  <h2>Carousel Example</h2>
+  <h2>Wróżby na Wiśniowej 56</h2>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -41,16 +44,16 @@
       <div class="item active">
         <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/ny.jpg" alt="Los Angeles" style="width:100%;">
         <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
+          <h3>"Dostałeś bilet do samolotu, który stoi pod szkołą, lot dziś o 20. Zgłoś ię do dyrekcji"</h3>
+          
         </div>
       </div>
 
       <div class="item">
         <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/chicago.jpg" alt="Chicago" style="width:100%;">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago!</p>
+          <h3>"Wkrótce zostaniesz Dyrektorem na Wiśniowej 56"</h3>
+          <p></p>
         </div>
       </div>
     
