--- a/index.html
+++ b/index.html
@@ -1,83 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
 <head>
-  <title>Cyfrowy wróżbita</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-  <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCgG8dPmm_Khss5aS7yctcfRxjTmcUXg4I",
-    authDomain: "zslitwarszawa.firebaseapp.com",
-    databaseURL: "https://zslitwarszawa.firebaseio.com",
-    projectId: "zslitwarszawa",
-    storageBucket: "zslitwarszawa.appspot.com",
-    messagingSenderId: "502519220327"
-  };
-  firebase.initializeApp(config);
-  
-  var fortuneQuotes = [ "A dream you have will come true.", "Our deeds determine us, as much as we determine our deeds.", "Never give up. You're not a failure if you don't give up.", "You can make your own happiness.", "Jeśli 3 razy kucniesz i 5 razy obrócisz się dookoła - twoja miłość będzie spełniona.", "Przed spożyciem ciasteczka skonsultuj się z lekarzem lub farmaceutą.", "Co masz zrobić dziś zrób dziś.", "Jak kocha to poczeka…<3", "Wrzuć na luz!", "Dzisiaj jest twój dobry dzień.", "Zasady są po to by je łamać", "Jak kocha to poczeka…", "Uwielbiasz chińszczyznę.", "Wszechświat wybrał cię na międzygalaktycznego wodzireja.", "Wkrótce skontaktuje się z tobą kosmita.", "Konfucjusz mówi, że masz serce wielkie jak Pałac Kultury.", "Wprowadź więcej danych.", "Now is the time to try something new.", "A very attractive person has a message for you.", "Wkrótce zostaniesz Dyrektorem na Wiśniowej 56", "Dostałeś bilet do samolotu, który stoi pod szkołą, lot dziś o 20. Zgłoś ię do dyrekcji" ];
-  
-</script>
-  
+	<meta charset=UTF-8>
+	<link rel="Stylesheet" type="text/css" href="obelgistyle.css" />
 </head>
 <body>
-
-<div class="container">
-  <h2>Wróżby na Wiśniowej 56</h2>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-
-      <div class="item active">
-        <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/ny.jpg" alt="Los Angeles" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>"Dostałeś bilet do samolotu, który stoi pod szkołą, lot dziś o 20. Zgłoś ię do dyrekcji"</h3>
-          
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/chicago.jpg" alt="Chicago" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>"Wkrótce zostaniesz Dyrektorem na Wiśniowej 56"</h3>
-          <p></p>
-        </div>
-      </div>
-    
-      <div class="item">
-        <img src="https://raw.githubusercontent.com/zslitwarszawa/zslitwarszawa.github.io/master/la.jpg" alt="New York" style="width:100%;">
-        <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>We love the Big Apple!</p>
-        </div>
-      </div>
-  
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-
+<center>
+	<script src="obelgi.js"></script>
+	<img src=ball.gif>
+	<h1 class="nag">My wiemy jaka będzie twoja przyszłość, a ty? <br> Zobacz co mówią o tobie karty!</h1>
+	<h2>Karty mówią:</h2>
+	<button type="button" class="klik" onclick="LosowaObelga()">Sprawdź</button>
+	<h1 id="obelga"></h1>
+	<h4>Wisniowa 56 Andrzejki 2018 <3 <br> Autorzy: Wróżbita Maciej, Wróżka Aldona, Wrurszka Grószka</h4>
+	<img src=pentagram.jpg>
+	</center>
 </body>
 </html>
