--- a/index.html
+++ b/index.html
@@ -1,18 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset=UTF-8>
-	<link rel="Stylesheet" type="text/css" href="obelgistyle.css" />
+  <title>Wróżby n Wiśniowej 56</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<center>
-	<script src="obelgi.js"></script>
-	<img src=ball.gif>
-	<h1 class="nag">My wiemy jaka będzie twoja przyszłość, a ty? <br> Zobacz co mówią o tobie karty!</h1>
-	<h2>Karty mówią:</h2>
-	<button type="button" class="klik" onclick="LosowaObelga()">Sprawdź</button>
-	<h1 id="obelga"></h1>
-	<h4>Wisniowa 56 Andrzejki 2018 <3 <br> Autorzy: Wróżbita Maciej, Wróżka Aldona, Wrurszka Grószka</h4>
-	<img src=pentagram.jpg>
-	</center>
+
+<div class="container">
+  <h2>Wróżby n Wiśniowej 56</h2>
+ 
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="aldona.html" target="_blank">
+          <img src="ball.gif" alt="ball" style="width:100%">
+          <div class="caption">
+            <p>Wróżbita Maciej, Wróżka Aldona, Wrurszka Grószka</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="Kards10/index.html" target="_blank">
+          <img src="Kards10/images/intro-bg.jpg" alt="wróżby" style="width:100%">
+          <div class="caption">
+            <p>Michał D.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="mb/index2.html" target="_blank">
+          <img src="mb/z1.jpg" alt="wróżby" style="width:100%">
+          <div class="caption">
+            <p>Michał B.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+	
+  </div>
+  
+  
+  
+   
+  
+  
+</div>
+
 </body>
 </html>
