--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Wróżby n Wiśniowej 56</title>
+  <title>Wróżby na Wiśniowej 56</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-  <h2>Wróżby n Wiśniowej 56</h2>
+  <h2 >Wróżby na Wiśniowej 56</h2>
  
   <div class="row">
     <div class="col-md-4">
