--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
 	
   </div>
   
-  
+   <div class="row">
+   
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="jh/wrozby.html" target="_blank">
+          <img src="jh/jh.png" alt="wróżby" style="width:100%">
+          <div class="caption">
+            <p>Jakub Hac, Adam Kwiecień</p>
+          </div>
+        </a>
+      </div>
+    </div>
+	
+  </div>
   
    
   
