--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="col-md-4">
       <div class="thumbnail">
         <a href="jh/wrozby.html" target="_blank">
-          <img src="jh/jh.png" alt="wróżby" style="width:100%">
+          <img src="jh/jh.jpg" alt="wróżby" style="width:100%">
           <div class="caption">
             <p>Jakub Hac, Adam Kwiecień</p>
           </div>
