--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Witaj na mojej stronie
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color:aquamarine;">
+    <h1>Wzory fizyczne - dynamika</h1>
+
+    <a href="https://www.abcfizyka.pl/zasady-dynamiki-.html"> Wzory </a>
+
+
+
+</body>
+</html>
